--- a/index.html
+++ b/index.html
@@ -8,38 +8,38 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>运通信息技术有限公司</title>
     <!-- normalizar -->
-    <link href="css/normalize.css" rel="stylesheet">
+    <link href="stylesheet/normalize.css" rel="stylesheet">
 
     <!-- Fonts -->
-    <!--<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>-->
-    <!--<link href='http://fonts.googleapis.com/css?family=Cabin:400,500,700't rel='stylesheet' type='text/css'>-->
-    <!--<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>-->
+    <!--<link href='http://fonts.googleapis.com/stylesheet?family=Montserrat:400,700' rel='stylesheet' type='text/stylesheet'>-->
+    <!--<link href='http://fonts.googleapis.com/stylesheet?family=Cabin:400,500,700't rel='stylesheet' type='text/stylesheet'>-->
+    <!--<link href='http://fonts.googleapis.com/stylesheet?family=Lato:300,400,700' rel='stylesheet' type='text/stylesheet'>-->
 
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="stylesheet/bootstrap.min.css" rel="stylesheet">
 
     <!--fontawesome-->
-    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="stylesheet/font-awesome.min.css" rel="stylesheet">
 
     <!--animation-->
-    <link href="css/animate.min.css" rel="stylesheet">
+    <link href="stylesheet/animate.min.css" rel="stylesheet">
 
-    <!-- fullpage css-->
-    <link href="css/jquery.fullPage.css" rel="stylesheet">
+    <!-- fullpage stylesheet-->
+    <link href="stylesheet/jquery.fullPage.css" rel="stylesheet">
 
-    <!--main css-->
-    <link href="css/style.css" rel="stylesheet">
+    <!--main stylesheet-->
+    <link href="stylesheet/style.css" rel="stylesheet">
 
-    <!--main css-->
-    <link href="css/responsive.css" rel="stylesheet">
+    <!--main stylesheet-->
+    <link href="stylesheet/responsive.css" rel="stylesheet">
 
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!-- HTML5 shim and Respond.javascript for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.javascript doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.javascript"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.javascript"></script>
     <![endif]-->
 </head>
 
@@ -403,22 +403,22 @@
     <!-- main jQuery-->
     <script src="http://libs.baidu.com/jquery/1.11.1/jquery.js"></script>
 
-    <!-- bootstrap js -->
-    <script src="js/bootstrap.min.js"></script>
+    <!-- bootstrap javascript -->
+    <script src="javascript/bootstrap.min.js"></script>
 
-    <!-- easings js -->
-    <script src="js/jquery.easings.min.js"></script>
+    <!-- easings javascript -->
+    <script src="javascript/jquery.easings.min.js"></script>
 
-    <!-- slimscroll js -->
-    <script src="js/jquery.slimscroll.min.js"></script>
+    <!-- slimscroll javascript -->
+    <script src="javascript/jquery.slimscroll.min.js"></script>
 
 
 
-    <!-- full page js-->
-    <script src="js/jquery.fullPage.min.js"></script>
+    <!-- full page javascript-->
+    <script src="javascript/jquery.fullPage.min.js"></script>
 
-    <!-- wow js -->
-    <script src="js/wow.min.js"></script>
+    <!-- wow javascript -->
+    <script src="javascript/wow.min.js"></script>
     <script>
         $(document).ready(function(){
            // $('#fullpage').fullpage();
@@ -431,8 +431,8 @@
 
     </script>
 
-    <!-- main js -->
-    <script src="js/main.js"></script>
+    <!-- main javascript -->
+    <script src="javascript/main.js"></script>
 
 </body>
 
